// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser: Component should render correctly 1`] = `
<styled.div>
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={null}
  />
  <NavigationContainer
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
        values={Object {}}
      />
    </BackButton>
  </NavigationContainer>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the user from the project?"
        id="project.addUser.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="project.addUser.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="project.addUser.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;

exports[`AddUser: Component should render correctly with users 1`] = `
<styled.div>
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <styled.div
      key="0"
    >
      <styled.div>
        <styled.div>
          Alan Watts
        </styled.div>
        <styled.div />
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="removeUserPlusButton0"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
    <styled.div
      key="1"
    >
      <styled.div>
        <styled.div>
          Dale Chihuly
        </styled.div>
        <styled.div>
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </styled.div>
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton1"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
    <styled.div
      key="2"
    >
      <styled.div>
        <styled.div>
          Dave Bowie
        </styled.div>
        <styled.div />
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton2"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
    <styled.div
      key="3"
    >
      <styled.div>
        <styled.div>
          Pellentesque a massa at purus cursus egestas. Aliquam ut vehicula. Praesent est erat, laoreet et ornare ullamcorper, finibus id nisl. Etiam tempor, ligula a sagittis
        </styled.div>
        <styled.div>
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </styled.div>
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton3"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
        values={Object {}}
      />
    </BackButton>
  </NavigationContainer>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the user from the project?"
        id="project.addUser.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="project.addUser.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="project.addUser.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;
